exercises/00-networking/00-deployment/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superapi-ingress
  namespace: sampleapp
  labels:
    name: superapi-ingress
  annotations:
    # specify the ingress-class as an annotation
    # kubernetes.io/ingress.class: azure/application-gateway
    # kubernetes.io/ingress.class: nginx
spec:
  # even better is setting the class here
  ingressClassName: nginx
  rules:
  # change IP with the IP of your ingress controller
  - host: 20.61.239.192.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: superapi
            port: 
              number: 80
